--creados dtos para estadisticas, recreado test de geografia y revisado test faltantes